--- a/CYWebImage/CYWebImage/url.plist
+++ b/CYWebImage/CYWebImage/url.plist
@@ -2,30 +2,22 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <array>
-	<string>http://appserver.jnwtv.com:8080/upload/head/484c157654a145baa036c31f268c4405.jpg</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/6dc1bbf2bc6189ac78410df4ed46ccf3.png</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/7841ed1894264d288ae5fff6e574b3d6.jpg</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/53d9638061a249728856d28bb62f11da.jpg</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/42127b601d7e42919a94ef1158dbac03.jpg</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/00064017620e481f9bf19e79c9320c78.jpg</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/7ff98eaa79254fa2a1a00e1ed9aa5a76.jpg</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/3ae00c2d5c9b44d1a5f65647c337ec29.jpg</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/ce02e03e37e24485b79fa1b7a1c86fad.jpg</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/e40145c4afa04d64a40b226b46086849.jpg</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/f7ad2c1465f941ddbb0ecebf9665a834.jpg</string>
-	<string></string>
-	<string></string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/bb8fb4e0dbf7463e96daa20b0d2f4ebe.jpg</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/11ca0884880248d08530ab029b4386c4.jpg</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/a3c07e5b32d44896b222f6943627630c.png</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/d5ffbce17fa24c0cb153ad48b0c07bcd.jpg</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/e97bcd72a6ed4276ace2abed94226fa8.jpg</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/6ddd739550cd44ffa6714271c47e215b.jpg</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/9c7475daeedc4a78a97fdc9c769734b0.jpg</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/4cf45fb49af24d36af357d2112224008.jpg</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/98c7663b3f0b4974a0d582d8f5e29ae8.jpg</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/3aa5931dd768472ea57cf85b077ff62b.jpg</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/da203f1956e843929cc9525f975926fc.png</string>
-	<string>http://appserver.jnwtv.com:8080/upload/head/4cc05eba6804472e94ba478005639851.png</string>
+	<string>http://7xnujb.com2.z0.glb.qiniucdn.com/%E6%95%B4%E5%AE%B9%E6%B6%B2/zry_cover.jpg</string>
+	<string>http://7xnujb.com2.z0.glb.qiniucdn.com/%E9%9A%BE%E8%A8%80%E4%B9%8B%E6%AC%B203%2Fcover.jpg</string>
+	<string>http://7xnujb.com2.z0.glb.qiniucdn.com/%E5%87%B6%E5%AE%85%E7%AC%94%E8%AE%B001/xzbj_cover.jpg</string>
+	<string>http://7xnujb.com2.z0.glb.qiniucdn.com/%E9%9A%BE%E8%A8%80%E4%B9%8B%E6%AC%B202/nyzy02_cover.jpg</string>
+	<string>http://7xnujb.com2.z0.glb.qiniucdn.com/yusangenvren%2Ffenmian.jpg</string>
+	<string>http://7xnujb.com2.z0.glb.qiniucdn.com/mmers%2Ffm.jpg</string>
+	<string>http://7xnujb.com2.z0.glb.qiniucdn.com/%E9%9A%BE%E8%A8%80%E4%B9%8B%E6%AC%B201/nyzy_cover.jpg</string>
+	<string>http://7xnujb.com2.z0.glb.qiniucdn.com/shejian%2Fcover.jpg</string>
+	<string>http://7xnujb.com2.z0.glb.qiniucdn.com/%E7%A7%98%E5%AF%86%E4%BA%8C%E4%BA%BA%E9%A3%9F%E8%A3%81%E5%88%87/ers001_covers_img.jpg</string>
+	<string>http://7xnujb.com2.z0.glb.qiniucdn.com/%E4%B8%8D%E8%89%AF%E5%B0%91%E5%B9%B401/blsn_cover.jpg?_=2015</string>
+	<string>http://7xnujb.com2.z0.glb.qiniucdn.com/harxsy%2Fcover02.jpg</string>
+	<string>http://7xnujb.com2.z0.glb.qiniucdn.com/%E6%88%91%E4%BB%AC%E4%BB%8E%E6%9C%AA%E4%B8%8D%E8%AE%A4%E8%AF%8601/wmcwbrs_cover.jpg</string>
+	<string>http://7xnujb.com2.z0.glb.qiniucdn.com/%E5%A4%8F%E8%87%B3%E6%9C%AA%E8%87%B301/xzwz_cover.jpg?_=1024</string>
+	<string>http://7xnujb.com2.z0.glb.qiniucdn.com/mlydcnl%2Ffengmian.jpg</string>
+	<string>http://7xnujb.com2.z0.glb.qiniucdn.com/taosheng%2Ftaos2.jpg</string>
+	<string>http://7xnujb.com2.z0.glb.qiniucdn.com/%E6%A2%A6%E5%85%B1%E6%9C%89%E7%9F%B3%E5%B0%81%E9%9D%A2%E5%9B%BE.jpg</string>
+	<string>http://7xnujb.com2.z0.glb.qiniucdn.com/test/testcover.jpg?_=20151115</string>
 </array>
 </plist>
